--- a/client/src/components/Layout.scss
+++ b/client/src/components/Layout.scss
@@ -1,10 +1,12 @@
+@import '../styles/variables';
+
 .main-layout {
-    position: relative;
-    min-height: 100vh;
-  }
+  // To są nasze domyślne style (ciemne tło)
+  position: relative;
+  min-height: 100vh;
   
-  .content {
-    padding-bottom: 150px; 
-    padding: 30px 25px 150px;
-  }
-  
+}
+
+.content {
+  padding-bottom: 150px;
+}
