--- a/client/src/screens/PerspectiveShiftScreen.scss
+++ b/client/src/screens/PerspectiveShiftScreen.scss
@@ -111,16 +111,18 @@
     padding: 15px;
     border-radius: 25px;
     color: white;
-    font-size: 16px;
+    font-size: 24px;
     cursor: pointer;
     transition: background-color 0.2s;
 
     &:hover {
       background-color: darken($primary-color, 10%);
+      
     }
 
     &:disabled {
       background-color: $secondary-color;
+      color: darken($text-color, 15%);
       cursor: not-allowed;
     }
   }
