--- a/client/src/screens/ValuesCompassScreen.scss
+++ b/client/src/screens/ValuesCompassScreen.scss
@@ -7,7 +7,7 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-  padding: 20px;
+  padding: 20px 20px 350px;
   box-sizing: border-box;
 
   &.chat-view {
